@@ -1,4 +1,4 @@
-.TH PCRE2BUILD 3 "26 April 2018" "PCRE2 10.32"
+.TH PCRE2BUILD 3 "15 November 2018" "PCRE2 10.33"
 .SH NAME
 PCRE2 - Perl-compatible regular expressions (revised API)
 .
@@ -533,6 +533,22 @@ information about code coverage, see the \fBgcov\fP and \fBlcov\fP
 documentation.
 .
 .
+.SH "DISABLING THE Z AND T FORMATTING MODIFIERS"
+.rs
+.sp
+The C99 standard defines formatting modifiers z and t for size_t and 
+ptrdiff_t values, respectively. By default, PCRE2 uses these modifiers in 
+environments other than Microsoft Visual Studio when __STDC_VERSION__ is 
+defined and has a value greater than or equal to 199901L (indicating C99).
+However, there is at least one environment that claims to be C99 but does not
+support these modifiers. If 
+.sp
+  --disable-percent-zt 
+.sp
+is specified, no use is made of the z or t modifiers. Instead or %td or %zu,
+%lu is used, with a cast for size_t values.
+.
+.
 .SH "SUPPORT FOR FUZZERS"
 .rs
 .sp
@@ -591,6 +607,6 @@ Cambridge, England.
 .rs
 .sp
 .nf
-Last updated: 26 April 2018
+Last updated: 15 November 2018
 Copyright (c) 1997-2018 University of Cambridge.
 .fi
